<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">OLSystem</string>
    <string name="action_settings">Settings</string>

    <!-- Other Strings -->

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="sign_with_google">Sign with google</string>
    <string name="remind">remind</string>
    <string name="reach_students_and_parents_where_they_are">Reach students and parents where they are</string>

    <string name="enter_your_email_or_phone">Enter your email or phone</string>
    <string name="or">OR</string>
    <string name="enter_your_email_phone">Enter your email/phone</string>
    <string name="class_joined">Class Joined</string>
    <string name="ai">AI</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


    //tab
    <string name="tab_text_1">Messages</string>
    <string name="tab_text_2">Files</string>
    <string name="tab_text_3">People</string>
    <string name="tab_text_4">Settings</string>
    <string name="menu_create_class">Create a class</string>
    <string name="menu_join_class">Join a class</string>
    <string name="new_message">New message</string>
    <string name="account_settings">Account settings</string>
    <string name="logout_option">Logout</string>

    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="app_logo">OLSystem\'s Logo</string>
    <string name="background_transform">background transformation</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="sign_out_option">Sign out</string>


    <!-- String array -->
    <string-array name="list_of_role">
        <item>Teacher</item>
        <item>Parent</item>
        <item>Student</item>
    </string-array>


    <!-- Test data -->

    <string name="class1">Class 1</string>
    <string name="class2">Class 2</string>
    <string name="class3">Class 3</string>
    <string name="class4">Class 4</string>

    //message
    <string-array name="avatar">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    </string-array>

    <string-array name="username">
        <item>Student 1</item>
        <item>Student 2</item>
        <item>Student 3</item>
        <item>Student 4</item>
        <item>Student 5</item>
        <item>Student 6</item>
        <item>Student 7</item>
        <item>Student 8</item>
        <item>Student 9</item>
        <item>Student 10</item>
    </string-array>

    <string-array name="status">
        <item>Alo 1</item>
        <item>Alo 2</item>
        <item>Alo 3</item>
        <item>Alo 4</item>
        <item>Alo 5</item>
        <item>Alo 6</item>
        <item>Alo 7</item>
        <item>Alo 8</item>
        <item>Alo 9</item>
        <item>Alo 10</item>
    </string-array>

    <string-array name="time">
        <item>01:12</item>
        <item>12:12</item>
        <item>15:12</item>
        <item>05:12</item>
        <item>08:13</item>
        <item>03:19</item>
        <item>09:17</item>
        <item>12:15</item>
        <item>16:13</item>
        <item>18:11</item>
    </string-array>

    //Files
    <string-array name="name_of_file">
        <item>Doc1</item>
        <item>Pdf2</item>
        <item>Img3</item>
        <item>Text4</item>
        <item>Doc2</item>
    </string-array>

    <string-array name="type_of_file">
        <item>docx</item>
        <item>pdf</item>
        <item>png</item>
        <item>txt</item>
        <item>docx</item>
    </string-array>

    <string-array name="upload_date">
        <item>February 01, 2021</item>
        <item>Match 01, 2021</item>
        <item>April 01, 2021</item>
        <item>May 01, 2021</item>
        <item>May 02, 2021</item>
    </string-array>


    <string-array name="classes_owned">
        <item>justAClass</item>
        <item>anotherClass</item>
    </string-array>

    <string-array name="classes_joined">
        <item>funnyClass</item>
        <item>checkClass</item>
        <item>Space Class</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classes_owned">Classes Owned</string>
    <string name="classes_joined">Classes Joined</string>
    <string name="home">Home</string>
    <string name="all_classes">All Classes</string>
    <string name="share_this_code">Share this code</string>
    <string name="share_code_information">This is your class code, so anyone who has it can join your class instantly.</string>
    <string name="copy">Copy</string>
    <string name="new_file">New file</string>
    <string name="new_member">New member</string>
    <string name="class_code">Class code</string>
    <string name="avatar">Avatar</string>
    <string name="members">Members</string>
    <string name="class_name">Class name</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="agree_message">I agree to only message people who are 13 or older.</string>
    <string name="school">School</string>
    <string name="delete_class">Delete class</string>
    <string name="leave_class">Leave class</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="to">To:</string>
    <string name="upload_new_file">Upload new file</string>
    <string name="upload_file_message">Choose your file to upload. The file will be pulic to everyone in the class.</string>
    <string name="select_participants">Select participants</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="contact">Contact</string>


</resources>