<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_course">

    <fragment
        android:id="@+id/nav_course"
        android:name="org.teamseven.ols.ui.course_content.PlaceholderFragment"
        android:label="@string/class1"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_course2"
        android:name="org.teamseven.ols.ui.course_content.PlaceholderFragment"
        android:label="@string/class2"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_course3"
        android:name="org.teamseven.ols.ui.course_content.PlaceholderFragment"
        android:label="@string/class3"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_course4"
        android:name="org.teamseven.ols.ui.course_content.PlaceholderFragment"
        android:label="@string/class4"
        tools:layout="@layout/fragment_messages" />
</navigation>